__header__([Octave News Archive], [logo])

<div class="content">

<dl>
    <dt>December 31, 2013</dt>
    <dd>Version 3.8.0 has been released and is now available
      for <a href="download.html">download</a>.  Octave 3.8.0 is a
      major new release.  See the <a href="NEWS-3.8.html">NEWS</a>
      file for a list of user-visible changes.
    </dd>
    <dd>
      Registrations for OctConf 2013 are
      <a href="http://www2.mate.polimi.it/ocs/?cf=42">now open</a>!
    </dd>
    <dt>February 21, 2013</dt>
    <dd>Version 3.6.4 has been released and is now available
      for <a href="download.html">download</a>. Octave 3.6.4 is a
      minor bug-fixing release. See
      the <a href="NEWS-3.6.html">NEWS</a> file for a list of
      user-visible changes since 3.4.
    </dd>
    <dt>January 28, 2013</dt>
    <dd>
      <a href="http://wiki.octave.org/OctConf_2013">OctConf 2013</a>
      will take place in Milano, Italy during June 24-26, 2013. All
      Octave users, developers, and enthusiasts are welcome to attend!
    </dd>
    <dt>August 1, 2012</dt>
    <dd>
      <a href="http://jordi.inversethought.com/blog/socis-2012-students/">ESA
      approved <em>two</em> students</a> to work for Octave under the
      SOCIS mentorship programme! Congratulations to Wendy Liu and
      Andrius Sutas who will be working on finishing the Agora website
      and low-level I/O respectively.
    </dd>
    <dt>July 18, 2012</dt>
    <dd>
      Octave has
      been <a href="http://sophia.estec.esa.int/socis2012/?q=node/13">accepted
      into SOCIS</a>. We're now hiring for one position!
    </dd>
    <dt>July 16, 2012</dt>
    <dd>
      <a href="http://www.octave.org/wiki/OctConf_2012">OctConf
      2012</a> is currently underway.
    </dd>

    <dt>June 8, 2012</dt>
    <dd>
      <a href="http://planet.octave.org">Planet Octave</a> is up,
      which is a collection of blogs related to Octave. At the moment,