@@ -4,7 +4,7 @@ __nav_buttons__([download])
 
 <div id="content">
 
-  GNU Octave 3.8.0 was released December 31, 2013.  Please read the
+  GNU Octave 3.8.1 was released March 7, 2014.  Please read the
   <a href="http://www.octave.org">announcement</a> on the front page of
   the Octave web site.
 
