@@ -24,31 +24,18 @@ __nav_buttons__([home])
     <a href="license.html">GNU General Public License</a>.
   </p>
 
-  <h2>February 26, 2013 &mdash; Google Summer of Code</h2>
+  <h2>March 7, 2014 &mdash; Octave 3.8.1 Released</h2>
   <p>
-    Octave was selected as a <a href="http://www.google-melange.com/gsoc/org2/google/gsoc2014/octave">mentoring organization</a> for the <a href="http://www.google-melange.com/gsoc/homepage/google/gsoc2014">Google Summer of Code</a> program for 2014.
-    We have participated in the past as part of the
-    <a href="http://www.gnu.org">GNU Project</a> but this is the first
-    year that we have been a mentoring organization.
-  </p>
-  <p>
-    Interested students who meet the <a href="http://www.google-melange.com/gsoc/document/show/gsoc_program/google/gsoc2014/help_page">requirements</a> listed on the GSoC web
-    site are encouraged to apply (see the Students and
-    Eligibility section).  Please also note the <a href="http://wiki.octave.org/GSoC_Project_Ideas#Steps_Toward_a_Successful_Application">guidelines for Octave</a>.
-  </p>
-
-  <h2>December 31, 2013 &mdash; Octave 3.8.0 Released</h2>
-  <p>
-    Octave 3.8.0 is a major new release and is now available for
+    Version 3.8.1 is a bug fixing release and is now available for
     <a href="download.html">download</a>.
   </p>
   <p>
-    One of the biggest new features for Octave 3.8 is a graphical user
-    interface.  It is the one thing that users have requested most
-    often over the last few years and now it is almost ready.  But
-    because it is not quite as polished as we would like, we have
-    decided to wait until the 4.0.x release series before making the
-    GUI the default interface (until then, you can use
+    One of the biggest new features for the Octave 3.8.x release
+    series is a graphical user interface.  It is the one thing that
+    users have requested most often over the last few years and now it
+    is almost ready.  But because it is not quite as polished as we
+    would like, we have decided to wait until the 4.0.x release series
+    before making the GUI the default interface (until then, you can use
     the <tt>--force-gui</tt> option to start the GUI).
   </p>
   <p>
@@ -91,6 +78,19 @@ __nav_buttons__([home])
   <p>
     See the <a href="NEWS-3.8.html">NEWS</a> file for a more complete
     list of user-visible changes.
+  </p>
+
+  <h2>February 26, 2013 &mdash; Google Summer of Code</h2>
+  <p>
+    Octave was selected as a <a href="http://www.google-melange.com/gsoc/org2/google/gsoc2014/octave">mentoring organization</a> for the <a href="http://www.google-melange.com/gsoc/homepage/google/gsoc2014">Google Summer of Code</a> program for 2014.
+    We have participated in the past as part of the
+    <a href="http://www.gnu.org">GNU Project</a> but this is the first
+    year that we have been a mentoring organization.
+  </p>
+  <p>
+    Interested students who meet the <a href="http://www.google-melange.com/gsoc/document/show/gsoc_program/google/gsoc2014/help_page">requirements</a> listed on the GSoC web
+    site are encouraged to apply (see the Students and
+    Eligibility section).  Please also note the <a href="http://wiki.octave.org/GSoC_Project_Ideas#Steps_Toward_a_Successful_Application">guidelines for Octave</a>.
   </p>
 
 </div>
