@@ -3,6 +3,12 @@ __header__([Octave News Archive], [logo])
 <div class="content">
 
 <dl>
+    <dt>March 7, 2014</dt>
+    <dd>Version 3.8.1 has been released and is now available
+      for <a href="download.html">download</a>.  Octave 3.8.1 is a
+      major new release.  See the <a href="NEWS-3.8.html">NEWS</a>
+      file for a list of user-visible changes.
+    </dd>
     <dt>December 31, 2013</dt>
     <dd>Version 3.8.0 has been released and is now available
       for <a href="download.html">download</a>.  Octave 3.8.0 is a
